--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
 license = "GPLv3"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = "~3.8"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
 
