--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
+chalice = "^1.26.6"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
