--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "GPLv3"
 python = "~3.8"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.26.6"
