--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.27.1"
 [tool.poetry.dev-dependencies]
 chalice = "^1.26.6"
 black = "^22.1.0"
+pytest = "^7.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
