--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.8"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
 requests = "^2.27.1"
+cachetools = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.26.6"
