--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
 requests = "^2.27.1"
 cachetools = "^5.0.0"
+ratelimit = "^2.2.1"
+tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.26.6"
