--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ requests = "^2.27.1"
 cachetools = "^5.0.0"
 ratelimit = "^2.2.1"
 tenacity = "^8.0.1"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
-chalice = "^1.26.6"
 black = "^22.1.0"
 pytest = "^7.0.1"
 
