--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ python = "~3.8"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.8.0"
 requests = "^2.27.1"
-cachetools = "^5.0.0"
 ratelimit = "^2.2.1"
 tenacity = "^8.0.1"
-aiohttp = "^3.8.1"
+Flask = "^2.0.3"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
