--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ratelimit = "^2.2.1"
 tenacity = "^8.0.1"
 Flask = "^2.0.3"
 Flask-Cors = "^3.0.10"
+tqdm = "^4.63.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
