--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tenacity = "^8.0.1"
 Flask = "^2.0.3"
 Flask-Cors = "^3.0.10"
 tqdm = "^4.63.0"
+flask-talisman = "^0.8.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
